@@ -14,7 +14,7 @@ depth: 1
 
 ### Other features
 
- * ...
+ * Added `search_index` option to StreamField blocks to control whether the block is indexed for searching (Vedant Pandey)
 
 ### Bug fixes
 
